# myLinuxKernel

./: README.md
GDB/: README.md
GDB/T1_staticFuncCallStack/: CMakeLists.txt  build.sh  main.cpp
SNPEpractice/Cpp/: CMakeLists.txt  main.cpp
SNPEpractice/Cpp/AndroidBuild/: buildAndroid.sh
cppPractice/: README.md  cmakeSkill.md  cppSkill.md
cppPractice/T0_describe_cup/: main.cpp
cppPractice/T2_revert_byte/: CMakeLists.txt  main.cpp  session.vim  viminfo.vim
cppPractice/TEST1/: CMakeLists.txt  androidExeBuild.sh  main.cpp
driverPractice/: README.md
driverPractice/NO1_hello_driver/: CMakeLists.txt  Makefile  hello_driver.c
driverPractice/NO2_DMA/: README.md  session.vim  viminfo.vim
ftrace/: README.md
javaPractice/: README.md
otherSkill/: memory_barrier.md  session.vim  ubuntu_operateion.md  viminfo.vim
otherSkill/vim/: .vimrc
otherSkill/vim/.vim/: .netrwhist  session.vim  viminfo.vim
otherSkill/vim/.vim/colors/: session.vim  viminfo.vim
processor/: session.vim  viminfo.vim  进程之间的通信.md  进程的互斥和同步.md
stability/: 死机.md
