cmake_minimum_required(VERSION 2.6)

PROJECT(hello)
SET(SRC_LIST main.cpp)

SET(CMAKE_BUILD_TYPE "Debug")
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g2 -ggdb")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
INCLUDE_DIRECTORIES(/usr/include/glib)

ADD_EXECUTABLE(hello ${SRC_LIST})
